Co-authored-by: Gonzalez Herrera Giovanni Paolo <gi.gonzalezh@duocuc.cl>

--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  cmd = "go build -o ./tmp/main ./cmd"
+  cmd = "go build -o ./tmp/main ."
   bin = "./tmp/main"
   delay = 0
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
